--- a/readme
+++ b/readme
@@ -1,5 +1,5 @@
 Investigation of Humanitarian Topics
-====================================
-Author: Ms. Yilin Wei - Solution for \#VisualizeChange 
+===========
+Author: Ms. Yilin Wei - Solution for #VisualizeChange 
 The goal of this data visualization is to investigate topics about humanity. It explores the connections between topics and subtopics, stakeholder analysis and gives context to the conversation. The data comes from WHS master catalogue and Twitter.
 Files in this folder is under GNU General Public License Version 3 (as published by the Free Software Foundation here: https://www.gnu.org/licenses/gpl.html).
